# AndroidVulkanSample

app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/glTF/: plane.glb
app/src/main/assets/shaders/: main.frag.spv  main.vert.spv  shadow.vert.spv  vert.spv
app/src/main/cpp/: CMakeLists.txt  Camera.cpp  Camera.h  Log.h  RenderGraph.cpp  RenderGraph.h  Renderer.cpp  Renderer.h  ShadowResources.cpp  ShadowResources.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommand.cpp  VulkanContext.cpp  VulkanContext.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanMesh.cpp  VulkanMesh.h  VulkanModel.cpp  VulkanModel.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSync.cpp  VulkanSync.h  VulkanTexture.cpp  VulkanTexture.h  asset_utils.cpp  asset_utils.h  camera.cpp  main.cpp  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command.cpp  vulkan_command.h  vulkan_context.cpp  vulkan_context.h  vulkan_descriptor.cpp  (+11 more)
app/src/main/shaders/: compile.sh  main.shader.frag  main.shader.vert  main.vert.spv  shader.vert  shadow.shader.vert  vert.spv
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
